--- a/Report.html
+++ b/Report.html
@@ -7552,7 +7552,7 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p><a id="short-overview"></a></p>
-<h2 id="Short-Overview">Short Overview<a class="anchor-link" href="#Short-Overview">¶</a></h2><p><em>short overview of what your project is about (e.g. you're building /testing certain RL models in certain environments; yes you can test your algorithm in more than 1 environment if your goal is to test an algorithm(s) performances in different settings)</em></p>
+<h2 id="Short-Overview">Short Overview<a class="anchor-link" href="#Short-Overview">¶</a></h2>
 <p>For my project, I chose to teach a learning model to play the original Super Mario Bros. game for the NES. I utilized a library created by Christian Kauten called gym-super-mario-bros, which provides an OpenAI Gym environment using the nes-py emulator (Kauten, 2018). The challenge is to beat as many levels as possible in the original Mario game for NES with the following rules of the game.</p>
 <p>The goal of the game is to avoid enemies and pits to reach the end of each level. One hit and Mario loses a life, starting over from the nearest checkpoint. Power-ups provide Mario an additional hit. The following page from the original game manual outlines the inputs Mario receives for the game:</p>
 <p><img alt="image" src="https://raw.githubusercontent.com/seel6470/CSPB-3202-Final-Project/main/images/controls.jpg"/></p>
