--- a/Report.html
+++ b/Report.html
@@ -14597,19 +14597,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>GitHub Repository for this project can be found at <a href="https://github.com/seel6470/CSPB-3202-Final-Project">https://github.com/seel6470/CSPB-3202-Final-Project</a></p>
-
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Beating-Super-Mario-Bros-(Level-1-1)-With-Reinforcement-Learning">Beating Super Mario Bros (Level 1-1) With Reinforcement Learning<a class="anchor-link" href="#Beating-Super-Mario-Bros-(Level-1-1)-With-Reinforcement-Learning">&#182;</a></h1><ol type="I">
+<h1 id="Beating-Super-Mario-Bros-(Level-1-1)-With-Reinforcement-Learning">Beating Super Mario Bros (Level 1-1) With Reinforcement Learning<a class="anchor-link" href="#Beating-Super-Mario-Bros-(Level-1-1)-With-Reinforcement-Learning">&#182;</a></h1><h3 id="Seth-Ely---CSPB-3202-Summer-2024">Seth Ely - CSPB 3202 Summer 2024<a class="anchor-link" href="#Seth-Ely---CSPB-3202-Summer-2024">&#182;</a></h3><ol type="I">
 <li><a href='#short-overview'>Short Overview</a></li>
 <li><a href='#approach'>Approach</a>
   <ol type="A">
@@ -14623,6 +14611,18 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <li><a href='#conclusion'>Conclusion</a></li>
 <li><a href='#references'>References</a></li>
 </ol>
+
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p>GitHub Repository for this project can be found at <a href="https://github.com/seel6470/CSPB-3202-Final-Project">https://github.com/seel6470/CSPB-3202-Final-Project</a></p>
 
 </div>
 </div>
